changed callout bg color to contrast better, fixed bug.

--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -12,6 +12,10 @@
 
 }
 
+.usa-hero-callout {
+  background-color: $color-gray-warm-light;
+}
+
 .usa-hero-callout .usa-button {
   margin-top: 2em;
 }
